[package]
name = "sdnt-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
actix-governor = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "io-util", "macros"] }
futures = "0.3"
anyhow = "1"

# DNS
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }

# SSL
rustls = "0.23"
rustls-pki-types = "1"
webpki-roots = "0.26"
tokio-rustls = "0.26"
x509-parser = "0.16"
time = "0.3"
